# numericalsolver

./: .gitignore  CMakeLists.txt  README.md  TESTS.md  main.cpp
core/: SolverResult.h
core/parser/: Evaluator.cpp  Evaluator.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
core/solvers/: BisectionSolver.cpp  BisectionSolver.h  ConjugateGradientSolver.cpp  ConjugateGradientSolver.h  CramerSolver.cpp  CramerSolver.h  FalsePositionSolver.cpp  FalsePositionSolver.h  FixedPointSolver.cpp  FixedPointSolver.h  GaussJordanSolver.cpp  GaussJordanSolver.h  GaussianSolver.cpp  GaussianSolver.h  GoldenSectionSolver.cpp  GoldenSectionSolver.h  ISolver.h  LUSolver.cpp  LUSolver.h  NewtonRaphsonSolver.cpp  NewtonRaphsonSolver.h  PALUSolver.cpp  PALUSolver.h  SecantSolver.cpp  SecantSolver.h  SolverCommon.cpp  SolverCommon.h  SolverFactory.cpp  SolverFactory.h
core/validation/: Errors.h  Validator.cpp  Validator.h
gui/: InputWidget.cpp  InputWidget.h  MainWindow.cpp  MainWindow.h  MethodSelector.cpp  MethodSelector.h  OutputWidget.cpp  OutputWidget.h
gui/output/: GraphTab.cpp  GraphTab.h  IterationTableTab.cpp  IterationTableTab.h  SolutionTab.cpp  SolutionTab.h
gui/panels/: OptimizationPanel.cpp  OptimizationPanel.h  RootFindingPanel.cpp  RootFindingPanel.h  SystemPanel.cpp  SystemPanel.h
gui/widgets/: ExpressionEditor.cpp  ExpressionEditor.h  MatrixInputWidget.cpp  MatrixInputWidget.h
tests/: solver_smoke.cpp
utils/: CsvExporter.cpp  CsvExporter.h  Logger.cpp  Logger.h  NumericalDiff.cpp  NumericalDiff.h
